--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=a3f5c8f9f3271d5825b3",
-    "/css/app.css": "/css/app.css?id=97bc02e3be408dbae5a9"
+    "/js/app.js": "/js/app.js?id=f99695f908008042661f",
+    "/css/app.css": "/css/app.css?id=14e9505db94b9f8c9482",
+    "/admin-dist/css/app.css": "/admin-dist/css/app.css?id=9e9591b2646ba150a1fd"
 }
